Regression: Save Buffers breaks image display during render #44503

Closed
opened 2015-04-24 07:15:36 +02:00 by Zauber Paracelsus · 8 comments

System Information
64bit Manjaro Linux, kernel 3.19
GeForce GTX 650 Ti Boost, driver 346.59

Blender Version
Broken: 2.75-dev, hash bdf6393
Worked

Short description of error
When rendering while the Save Buffers option is enabled, the image being rendered is not displayed and is instead left blank until the render finishes, at which point it will finally display. This happens with both Blender Internal and Cycles. Does not occur in 2.74

Exact steps for others to reproduce the error

  1. Open any scene.
  2. Go to the Performance tab under Render settings and enable Save Buffers
  3. Render.
**System Information** 64bit Manjaro Linux, kernel 3.19 GeForce GTX 650 Ti Boost, driver 346.59 **Blender Version** Broken: 2.75-dev, hash bdf6393 Worked **Short description of error** When rendering while the Save Buffers option is enabled, the image being rendered is not displayed and is instead left blank until the render finishes, at which point it will finally display. This happens with both Blender Internal and Cycles. Does not occur in 2.74 **Exact steps for others to reproduce the error** 1) Open any scene. 2) Go to the Performance tab under Render settings and enable Save Buffers 3) Render.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ZauberParacelsus

Added subscriber: @ZauberParacelsus
Dalai Felinto was assigned by Bastien Montagne 2015-04-24 14:32:24 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Dalai, probably another glitch from “monster” multiview feature? ;)

Dalai, probably another glitch from “monster” multiview feature? ;)

Confirmed, it's easier to see this in cycles. I'll look at it

Confirmed, it's easier to see this in cycles. I'll look at it

This issue was referenced by 1227e5c3d1

This issue was referenced by 1227e5c3d1ee20e9af57984a261b1d51d48c0263

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1227e5c3d1.

Closed by commit 1227e5c3d1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44503
No description provided.