Fix T44503 full sample does not display any preview any more.

The fix exposes another error not fixed in this commit, escaping the
render will not flush the full sample render result correctly.